--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,14 @@
 <resources>
     <string name="app_name">Mutall</string>
     <string name="account_type">Account Type</string>
+    <string name="view_inbox">VIEW MESSAGES FROM:</string>
     <string-array name="accounts">
         <item>All Accounts</item>
         <item>Accounts with no reading</item>
+    </string-array>
+
+    <string-array name="recipients">
+        <item>95551</item>
+        <item>KenyaPower</item>
     </string-array>
 </resources>
